--- a/index.html
+++ b/index.html
@@ -11,42 +11,98 @@
   </head>
   <body>
     <section class="page-header">
-      <audio id="audio" src="DJSona.mp3"></audio>
-      <h1 class="project-name">
-        <span class="rythm-medium" style="display:inline-block">Rythm</span>
-        <span class="rythm-high" style="display:inline-block">.js</span>
-      </h1>
+      <h1 class="project-name">Rythm.js</h1>
       <h2 class="project-tagline">Make your page dancing.</h2>
-      <a href="https://github.com/Okazari/Rythm.js" class="btn rythm-bass">View on GitHub</a>
-      <a href="https://github.com/Okazari/Rythm.js/zipball/master" class="btn rythm-bass">Download .zip</a>
-      <a href="https://github.com/Okazari/Rythm.js/tarball/master" class="btn rythm-high">Download .tar.gz</a>
+      <a href="https://github.com/Okazari/Rythm.js" class="btn">View on GitHub</a>
+      <a href="https://github.com/Okazari/Rythm.js/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/Okazari/Rythm.js/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="rythmjs" class="anchor" href="#rythmjs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Rythm.js</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Link to the documentation : <a href="http://okazari.github.io/Rythm.js/">http://okazari.github.io/Rythm.js/</a></p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>A javascript library that makes your page dancing.</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Actually in developpement</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<h1>
+<a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Getting started</h1>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Install with npm (Soon)</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<pre><code>npm install rythm.js
+</code></pre>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Import rythm in to your page</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<div class="highlight highlight-text-html-basic"><pre>&lt;<span class="pl-ent">script</span> <span class="pl-e">type</span>=<span class="pl-s"><span class="pl-pds">"</span>text/javascript<span class="pl-pds">"</span></span> <span class="pl-e">src</span>=<span class="pl-s"><span class="pl-pds">"</span>../rythm.js<span class="pl-pds">"</span></span>&gt;&lt;/<span class="pl-ent">script</span>&gt;</pre></div>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>Create an audio element with your music as source</p>
+
+<div class="highlight highlight-text-html-basic"><pre>&lt;<span class="pl-ent">audio</span> <span class="pl-e">id</span>=<span class="pl-s"><span class="pl-pds">"</span>audio<span class="pl-pds">"</span></span> <span class="pl-e">src</span>=<span class="pl-s"><span class="pl-pds">"</span>../samples/rythmC.mp3<span class="pl-pds">"</span></span>&gt;&lt;/<span class="pl-ent">audio</span>&gt;</pre></div>
+
+<p>Add one the rythm css classes to indicate which element will dance.</p>
+
+<div class="highlight highlight-text-html-basic"><pre>&lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>rythm-bass<span class="pl-pds">"</span></span>&gt;&lt;/<span class="pl-ent">div</span>&gt;</pre></div>
+
+<p>Create a Rythm object and give it the audio element then use the start function</p>
+
+<div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> rythm <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-en">Rythm</span>();
+<span class="pl-k">var</span> audio <span class="pl-k">=</span> <span class="pl-c1">document</span>.<span class="pl-c1">getElementById</span>(<span class="pl-s"><span class="pl-pds">'</span>audio<span class="pl-pds">'</span></span>);
+<span class="pl-smi">rythm</span>.<span class="pl-en">setMusic</span>(audio);
+<span class="pl-smi">rythm</span>.<span class="pl-c1">start</span>();</pre></div>
+
+<h1>
+<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Documentation</h1>
+
+<p>IN PROGESS</p>
+
+<h2>
+<a id="rythm-object" class="anchor" href="#rythm-object" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Rythm object</h2>
+
+<div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> rythm <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-en">Rythm</span>();
+
+<span class="pl-c">//Default 1</span>
+<span class="pl-smi">rythm</span>.<span class="pl-smi">startingScale</span> <span class="pl-k">=</span> value;
+
+<span class="pl-c">//Default 100</span>
+<span class="pl-smi">rythm</span>.<span class="pl-smi">maxValueHistory</span> <span class="pl-k">=</span> value;
+
+<span class="pl-c">//Default 0.75</span>
+<span class="pl-smi">rythm</span>.<span class="pl-smi">pulseRatio</span> <span class="pl-k">=</span> value;
+
+<span class="pl-c">//Set the music the page will dance to.</span>
+<span class="pl-smi">rythm</span>.<span class="pl-en">setMusic</span>(audioElement);
+
+<span class="pl-c">//Adjust the gain of the music.</span>
+<span class="pl-smi">rythm</span>.<span class="pl-en">setGain</span>(value);
+
+<span class="pl-c">//Let's dance</span>
+<span class="pl-smi">rythm</span>.<span class="pl-c1">start</span>();
+
+<span class="pl-c">//Stop the party</span>
+<span class="pl-smi">rythm</span>.<span class="pl-c1">stop</span>();</pre></div>
+
+<h2>
+<a id="classes" class="anchor" href="#classes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Classes</h2>
+
+<pre><code>rythm-bass
+rythm-medium
+rythm-high
+</code></pre>
+
+<h1>
+<a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h1>
+
+<p>TODO</p>
+
+<h1>
+<a id="contribute" class="anchor" href="#contribute" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contribute</h1>
+
+<p>TODO</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Okazari/Rythm.js">Rythm.js</a> is maintained by <a href="https://github.com/Okazari">Okazari</a>.</span>
@@ -56,18 +112,6 @@
 
     </section>
 
-    <script src='rythm.js'></script>
-    <script type="text/javascript">
-      window.onload = function(){
-        console.log('coucou');
-        var rythm = new Rythm();
-        rythm.pulseRatio = 0.15;
-        rythm.startingScale = 0.90;
-        rythm.maxValueHistory = 50;
-        var audio = document.getElementById('audio');
-        rythm.setMusic(audio);
-        rythm.start();
-      }
-    </script>
+  
   </body>
 </html>
