--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="https://github.com/Okazari/Rythm.js/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/Okazari/Rythm.js/tarball/master" class="btn">Download .tar.gz</a>
     </section>
-
+    <audio src="DJSona.mp3" id="audio"></audio>
     <section class="main-content">
       <h1>
 <a id="rythmjs" class="anchor" href="#rythmjs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Rythm.js</h1>
@@ -114,4 +114,13 @@ rythm-high
 
   
   </body>
+  <script src="rythm.js"></script>
+  <script type="text/javascript">
+    window.onload = function(){
+      var rythm = new Rythm();
+      var audio = document.getElementById('audio');
+      rythm.setMusic(audio);
+      rythm.start();
+    }
+  </script>
 </html>
