--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@ rythm-high
   <script type="text/javascript">
     window.onload = function(){
       var rythm = new Rythm();
+      rythm.startingScale  = 0.90;
+      rythm.pulseRatio  = 0.15;
       rythm.setGain(0.1);
       var audio = document.getElementById('audio');
       rythm.setMusic(audio);
