--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ rythm-high
       var rythm = new Rythm();
       rythm.startingScale  = 0.90;
       rythm.pulseRatio  = 0.15;
+      rythm.maxValueHistory = 50;
       rythm.setGain(0.1);
       var audio = document.getElementById('audio');
       rythm.setMusic(audio);
