--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
 <li>You actually can add classes to make your HTML Elements pulse following the rythm of your music.</li>
 </ul>
 
+<h2>Future features</h2>
+
+<ul>
+  <li>Add more rythm class frequences</li>
+  <li>Add rythm move class (pulse, rotate etc...)</li>
+</ul>
+
 <h1>
 <a id="contribute" class="anchor" href="#contribute" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contribute</h1>
 
