Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
       <h1>
 <a id="rythmjs" class="anchor" href="#rythmjs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Rythm.js</h1>
 
-<p>A javascript library that lets your page dance.</p>
+<p><a href="https://travis-ci.org/Okazari/Rythm.js"><img src="https://travis-ci.org/Okazari/Rythm.js.svg?branch=master" alt="Build Status"></a>
+<a href="https://codeclimate.com/github/Okazari/Rythm.js/code"><img src="https://codeclimate.com/github/Okazari/Rythm.js/badges/gpa.svg" alt="Code Climate"></a></p>
+
+<p>Demo at : <a href="http://okazari.github.io/Rythm.js/">http://okazari.github.io/Rythm.js/</a></p>
+
+<p>A javascript library that makes your page dancing.</p>
 
 <p>Actually in developpement</p>
 
@@ -38,61 +43,66 @@
 
 <div class="highlight highlight-text-html-basic"><pre>&lt;<span class="pl-ent">script</span> <span class="pl-e">type</span>=<span class="pl-s"><span class="pl-pds">"</span>text/javascript<span class="pl-pds">"</span></span> <span class="pl-e">src</span>=<span class="pl-s"><span class="pl-pds">"</span>../rythm.js<span class="pl-pds">"</span></span>&gt;&lt;/<span class="pl-ent">script</span>&gt;</pre></div>
 
-<p>Create an audio element with your music as source</p>
-
-<div class="highlight highlight-text-html-basic"><pre>&lt;<span class="pl-ent">audio</span> <span class="pl-e">id</span>=<span class="pl-s"><span class="pl-pds">"</span>audio<span class="pl-pds">"</span></span> <span class="pl-e">src</span>=<span class="pl-s"><span class="pl-pds">"</span>../samples/rythmC.mp3<span class="pl-pds">"</span></span>&gt;&lt;/<span class="pl-ent">audio</span>&gt;</pre></div>
-
-<p>Add one the rythm css classes to indicate which element will dance.</p>
+<p>Add one of the rythm css classes to indicate which element will dance.</p>
 
 <div class="highlight highlight-text-html-basic"><pre>&lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>rythm-bass<span class="pl-pds">"</span></span>&gt;&lt;/<span class="pl-ent">div</span>&gt;</pre></div>
 
-<p>Create a Rythm object and give it the audio element then use the start function.</p>
+<p>Create a Rythm object and give it your audio url then use the start function.</p>
 
 <div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> rythm <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-en">Rythm</span>();
-<span class="pl-k">var</span> audio <span class="pl-k">=</span> <span class="pl-c1">document</span>.<span class="pl-c1">getElementById</span>(<span class="pl-s"><span class="pl-pds">'</span>audio<span class="pl-pds">'</span></span>);
-<span class="pl-smi">rythm</span>.<span class="pl-en">setMusic</span>(audio);
+<span class="pl-smi">rythm</span>.<span class="pl-en">setMusic</span>(<span class="pl-s"><span class="pl-pds">"</span>../examples/sample.mp3<span class="pl-pds">"</span></span>);
 <span class="pl-smi">rythm</span>.<span class="pl-c1">start</span>();</pre></div>
 
 <h1>
 <a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Documentation</h1>
-
-<p>IN PROGESS</p>
 
 <h2>
 <a id="rythm-object" class="anchor" href="#rythm-object" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Rythm object</h2>
 
 <div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> rythm <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-en">Rythm</span>();
 
-<span class="pl-c">/* The starting scale is the minimum scale your elements will take </span>
-<span class="pl-c"> * Scale ratio is startingScale + (pulseRatio * currentPulse);</span>
-<span class="pl-c"> * Value in percentage between 0-1</span>
-<span class="pl-c"> * Default 1</span>
-<span class="pl-c"> */</span>
-<span class="pl-smi">rythm</span>.<span class="pl-smi">startingScale</span> <span class="pl-k">=</span> value;
-
-<span class="pl-c">/* The pulse ratio is be the maximum additionnal scale your element will take </span>
-<span class="pl-c"> * Scale ratio is startingScale + (pulseRatio * currentPulse)</span>
+<span class="pl-c">/* The starting scale is the minimum scale your elements will take (Scale ratio is startingScale + (pulseRatio * currentPulse));</span>
 <span class="pl-c"> * Value in percentage between 0-1</span>
 <span class="pl-c"> * Default 0.75</span>
 <span class="pl-c"> */</span>
+<span class="pl-smi">rythm</span>.<span class="pl-smi">startingScale</span> <span class="pl-k">=</span> value;
+
+<span class="pl-c">/* The pulse ratio is be the maximum additionnal scale your element will take (Scale ratio is startingScale + (pulseRatio * currentPulse))</span>
+<span class="pl-c"> * Value in percentage between 0-1</span>
+<span class="pl-c"> * Default 0.30</span>
+<span class="pl-c"> */</span>
 <span class="pl-smi">rythm</span>.<span class="pl-smi">pulseRatio</span> <span class="pl-k">=</span> value;
 
-<span class="pl-c">/* The max value history represent the number of passed value </span>
-<span class="pl-c"> * that will be stored to evaluate the current pulse.</span>
+<span class="pl-c">/* The max value history represent the number of passed value that will be stored to evaluate the current pulse.</span>
 <span class="pl-c"> * Int value, minimum 1</span>
 <span class="pl-c"> * Default 100</span>
 <span class="pl-c"> */</span>
 <span class="pl-smi">rythm</span>.<span class="pl-smi">maxValueHistory</span> <span class="pl-k">=</span> value;
 
 <span class="pl-c">/* Set the music the page will dance to.</span>
-<span class="pl-c"> * @audioElement : HTMLAudioElement</span>
+<span class="pl-c"> * @audioUrl : '../example/mysong.mp3'</span>
 <span class="pl-c"> */</span>
-<span class="pl-smi">rythm</span>.<span class="pl-en">setMusic</span>(audioElement);
+<span class="pl-smi">rythm</span>.<span class="pl-en">setMusic</span>(audioUrl);
 
 <span class="pl-c">/* Adjust music's gain.</span>
-<span class="pl-c"> * value : Number</span>
+<span class="pl-c"> * @value : Number</span>
 <span class="pl-c"> */</span>
 <span class="pl-smi">rythm</span>.<span class="pl-en">setGain</span>(value);
+
+<span class="pl-c">/* Add your own rythm-class</span>
+<span class="pl-c"> * @elementClass: Class that you want to link your rythm to.</span>
+<span class="pl-c"> * @danceType : Atm just use "size";</span>
+<span class="pl-c"> * @startValue: The starting frequence of your rythm.</span>
+<span class="pl-c"> * @nbValue: The number of frequences of your rythm.</span>
+<span class="pl-c"> * 1024 Frequences, your rythm will react to the average of your selected frequences.</span>
+<span class="pl-c"> * Exemples : bass 0-10 ; medium 150-40 ; high 500-100</span>
+<span class="pl-c"> */</span>
+<span class="pl-smi">rythm</span>.<span class="pl-en">addRythm</span>(elementClass, danceType, startValue, nbValue);
+
+<span class="pl-c">/* Plug your computer microphone to rythm.js</span>
+<span class="pl-c"> * This function return a promise resolved when the microphone is up.</span>
+<span class="pl-c"> */</span>
+<span class="pl-smi">rythm</span>.<span class="pl-en">plugMicrophone</span>().<span class="pl-en">then</span>(<span class="pl-k">function</span>(){<span class="pl-k">...</span>})
 
 <span class="pl-c">//Let's dance</span>
 <span class="pl-smi">rythm</span>.<span class="pl-c1">start</span>();
@@ -109,11 +119,31 @@
 <li>rythm-high</li>
 </ul>
 
+<h2>
+<a id="custom-classes" class="anchor" href="#custom-classes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Custom-classes</h2>
+
+<p>You can use the <code>addRythm</code> function to make your own classes listen to specifics frequences.
+Here is how the basics classes are created :</p>
+
+<ul>
+<li><code>addRythm('rythm-bass','size',0,10);</code></li>
+<li><code>addRythm('rythm-medium','size',150,40);</code></li>
+<li><code>addRythm('rythm-high','size',500,100);</code></li>
+</ul>
+
 <h1>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h1>
 
 <ul>
 <li>You actually can add classes to make your HTML Elements pulse following the rythm of your music.</li>
+</ul>
+
+<h2>
+<a id="future" class="anchor" href="#future" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Future</h2>
+
+<ul>
+<li>Add more rythm class frequences</li>
+<li>Add rythm move class (pulse, rotate etc...)</li>
 </ul>
 
 <h1>
