--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
 <p>Demo at : <a href="http://okazari.github.io/Rythm.js/">http://okazari.github.io/Rythm.js/</a></p>
 
-<p>A javascript library that makes your page dancing.</p>
+<p>A javascript library that makes your page dance.</p>
 
-<p>Actually in developpement</p>
+<p>Currently in development</p>
 
 <h1>
 <a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Getting started</h1>
