Npm star instead of gulp

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ Here is how the basics classes are created :</p>
 <li>Clone your repository</li>
 <li>run <code>npm install</code>
 </li>
-<li>run <code>gulp</code> in the main folder to launch a development webserver.</li>
+<li>run <code>npm start</code> in the main folder to launch a development webserver.</li>
 <li>Enjoy the rythm.</li>
 </ul>
 
