feat: add minified bundle

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <button id='stop'>Stop Demo</button>
       <button id='mic'>Use Microphone</button>
     </div>
-    <script type="text/javascript" src="./rythm.js"></script>
+    <script type="text/javascript" src="./rythm.min.js"></script>
     <script type="text/javascript" src="./demo/exemple.js"></script>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
   </body>
