Reset elements to original position

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="./demo/rythm.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <!-- <audio id="audio" src="samples/rythmC" autoplay=""></audio> -->
+    <audio id="audio" src="samples/rythmC.mp3"></audio>
+    <button id="reset" disabled>Reset</button>
     <div class="container">
       <h1 class="shake3">
         Rythm.js - v2.1.1
@@ -16,7 +17,7 @@
       </h2>
       <div id='player'>
           <button id='start'>Start Demo</button>
-          <button id='stop'>Stop Demo</button>
+          <button id='stop'>Pause Demo</button>
           <button id='mic'>Use Microphone</button>
         </div>
       <div>
@@ -200,7 +201,7 @@
       </section>
       <div id='playerBottom'>
           <button id='startBottom'>Start Demo</button>
-          <button id='stopBottom'>Stop Demo</button>
+          <button id='stopBottom'>Pause Demo</button>
           <button id='micBottom'>Use Microphone</button>
         </div>
       <div>
