Works fine, need to tune a bit style

--- a/index.html
+++ b/index.html
@@ -204,6 +204,8 @@
           <button id='micBottom'>Use Microphone</button>
         </div>
       <div>
+      <div id="shout">
+      </div>
     </div>
     <script type="text/javascript" src="./rythm.js"></script>
     <script type="text/javascript" src="./demo/exemple.js"></script>
