--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@
         <div class="demo">
           <div class="rythm bar1"></div>
           <pre class="prettyprint">
-            rythm.addRythm('bar1', 'color', 0, 10)
+            rythm.addRythm('bar1', 'bar', 0, 10)
           </pre>
         </div>
         <div class="demo">
           <div class="rythm bar2"></div>
           <pre class="prettyprint">
-            rythm.addRythm('bar2', 'color', 0, 10, {
+            rythm.addRythm('bar2', 'bar', 0, 10, {
               from: [0,0,255],
               to:[255,0,255]
             })
@@ -220,7 +220,7 @@
         <div class="demo">
           <div class="rythm bar3"></div>
           <pre class="prettyprint">
-            rythm.addRythm('bar3', 'color', 0, 10, {
+            rythm.addRythm('bar3', 'bar', 0, 10, {
               from: [255,255,0],
               to:[255,0,0]
             })</pre>
