:sparkles: Make the contributor dance and add a link to its githup page

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <button id='micBottom'>Use Microphone</button>
         </div>
       <div>
-      <div id="shout">
+      <div id="shout" class="shout">
       </div>
     </div>
     <script type="text/javascript" src="./rythm.js"></script>
