--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div id='player'>
           <button id='start'>Start Demo</button>
           <button id='stop'>Stop Demo</button>
+          <button id='stopReset'>Stop (and Reset) Demo</button>
           <button id='mic'>Use Microphone</button>
         </div>
       <div>
@@ -201,6 +202,7 @@
       <div id='playerBottom'>
           <button id='startBottom'>Start Demo</button>
           <button id='stopBottom'>Stop Demo</button>
+          <button id='stopResetBottom'>Stop (and Reset) Demo</button>
           <button id='micBottom'>Use Microphone</button>
         </div>
       <div>
