--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- <audio id="audio" src="samples/rythmC" autoplay=""></audio> -->
     <div class="container">
       <h1 class="shake3">
-        Rythm.js - v2.1.1
+        Rythm.js - v2.2.0
       </h1>
       <h2>
         A javascript library that makes your page dance.
@@ -209,7 +209,7 @@
       <div id="shout">
       </div>
     </div>
-    <script type="text/javascript" src="./rythm.js"></script>
+    <script type="text/javascript" src="./rythm.min.js"></script>
     <script type="text/javascript" src="./demo/exemple.js"></script>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
   </body>
