added reverse for border radius dance type

--- a/index.html
+++ b/index.html
@@ -206,6 +206,14 @@
             rythm.addRythm('radius1', 'radius', 5, 25)
           </pre>
         </div>
+        <div class="demo">
+          <div class="rythm radius2">♫</div>
+          <pre class="prettyprint">
+            rythm.addRythm('radius1', 'radius', 5, 25, { 
+              reverse: true 
+            })
+          </pre>
+        </div>
       </section>
       <div id='playerBottom'>
           <button id='startBottom'>Start Demo</button>
