--- a/index.html
+++ b/index.html
@@ -203,14 +203,19 @@
         <div class="demo">
           <div class="rythm radius1">♫</div>
           <pre class="prettyprint">
-            rythm.addRythm('radius1', 'radius', 5, 25)
+            rythm.addRythm('radius1', 'radius', 5, 25, {
+              min: 5,
+              max: 25
+            })
           </pre>
         </div>
         <div class="demo">
           <div class="rythm radius2">♫</div>
           <pre class="prettyprint">
             rythm.addRythm('radius1', 'radius', 5, 25, { 
-              reverse: true 
+              reverse: true,
+              min: 5, 
+              max: 25
             })
           </pre>
         </div>
