--- a/index.html
+++ b/index.html
@@ -220,6 +220,41 @@
             })</pre>
         </div>
       </section>
+      <section>
+        <h1>
+          Swing
+        </h1>
+        <div class="demo">
+          <div class="rythm swing1">♫</div>
+          <pre class="prettyprint">
+            rythm.addRythm('swing1', 'swing', 0, 10)
+          </pre>
+        </div>
+        <div class="demo">
+          <div class="rythm swing2">♫</div>
+          <pre class="prettyprint">
+            rythm.addRythm('swing2', 'swing', 0, 10, {
+              curve: 'up',
+            })
+          </pre>
+        </div>
+        <div class="demo">
+          <div class="rythm swing3">♫</div>
+          <pre class="prettyprint">
+            rythm.addRythm('swing3', 'swing', 0, 10, {
+              direction: 'left',
+            })
+          </pre>
+        </div>
+        <div class="demo">
+          <div class="rythm swing4">♫</div>
+          <pre class="prettyprint">
+            rythm.addRythm('swing4', 'swing', 0, 10, {
+              radius: 10,
+            })
+          </pre>
+        </div>
+      </section>
       <div id='playerBottom'>
           <button id='startBottom'>Start Demo</button>
           <button id='stopBottom'>Stop Demo</button>
