--- a/index.html
+++ b/index.html
@@ -256,6 +256,34 @@
       </section>
       <section>
         <h1>
+          Border-Color
+        </h1>
+        <div class="demo">
+          <div class="rythm borderColor1"></div>
+          <pre class="prettyprint">
+            rythm.addRythm('borderColor1', 'borderColor', 0, 10)
+          </pre>
+        </div>
+        <div class="demo">
+          <div class="rythm borderColor2"></div>
+          <pre class="prettyprint">
+            rythm.addRythm('borderColor2', 'borderColor', 0, 10, {
+              from: [0,0,255],
+              to:[255,0,255]
+            })
+          </pre>
+        </div>
+        <div class="demo">
+          <div class="rythm borderColor3"></div>
+          <pre class="prettyprint">
+            rythm.addRythm('borderColor3', 'color', 0, 10, {
+              from: [255,255,0],
+              to:[255,0,0]
+            })</pre>
+        </div>
+      </section>
+      <section>
+        <h1>
           Background-Color
         </h1>
         <div class="demo">
