feat(dance): introducing the kern dance !
Signed-off-by: Mathieu POUSSE <m.mathieu.pousse@gmail.com>

--- a/index.html
+++ b/index.html
@@ -205,7 +205,17 @@
           </pre>
         </div>
       </section>
-
+      <section>
+        <h1>
+          Kern
+        </h1>
+        <div class="demo">
+          <div class="rythm kern">𐇑🕪 rythm.js</div>
+          <pre class="prettyprint">
+            rythm.addRythm('kern', 'kern')
+          </pre>
+        </div>
+      </section>
       <section>
         <h1>
           Blur
