--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         A javascript library that makes your page dance.
       </h2>
       <div id='player'>
-          <button id='start'>Start Demo</button>
-          <button id='stop'>Stop Demo</button>
-          <button id='mic'>Use Microphone</button>
-        </div>
+        <button id='start'>Start Demo</button>
+        <button id='stop'>Stop Demo</button>
+        <button id='mic'>Use Microphone</button>
+      </div>
       <div>
         <a class="twist3" href="https://github.com/Okazari/Rythm.js">View on github</a>
         <a class="twist1" href="https://github.com/Okazari/Rythm.js/releases">Release notes</a>
@@ -279,7 +279,8 @@
             rythm.addRythm('borderColor3', 'color', 0, 10, {
               from: [255,255,0],
               to:[255,0,0]
-            })</pre>
+            })
+          </pre>
         </div>
       </section>
       <section>
