--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
                   })
                 </pre>
         </div>
+        <h3>
+          Tap
+        </h3>
+        <div class="demo">
+          <div class="rythm tap1">♫</div>
+          <pre class="prettyprint">
+            rythm.addRythm('tap1', 'tap', 0, 10)
+          </pre>
+        </div>
+        <div class="demo">
+          <div class="rythm tap2">♫</div>
+          <pre class="prettyprint">
+            rythm.addRythm('tap2', 'tap', 0, 10, {
+              reverse : true
+            })
+          </pre>
+        </div>
       </section>
       <h1>
         Added in v2.2.3
@@ -434,6 +451,7 @@
               to:[255,0,0]
             })</pre>
         </div>
+
       </section>
       <div id='playerBottom'>
           <button id='startBottom'>Start Demo</button>
