Font-color dance

--- a/index.html
+++ b/index.html
@@ -54,6 +54,33 @@
         </div>
       </section>
       <h1>
+        Add new dance
+      </h1>
+      <section>
+        <h3>
+          Font-color
+        </h3>
+        <div class="demo">
+          <div class="rythm fontColor fontColor1">
+            Font-color
+          </div>
+          <pre class="prettyprint">
+                rythm.addRythm('fontColor1', 'color', 0, 10)
+              </pre>
+        </div>
+        <div class="demo">
+          <div class="rythm fontColor fontColor2">
+            Font-color
+          </div>
+          <pre class="prettyprint">
+                rythm.addRythm('fontColor2', 'color', 0, 10 {
+                  from: [0,0,255],
+                  to:[255,0,255]
+                })
+          </pre>
+        </div>
+      </section>
+      <h1>
         Added in v2.2.4
       </h1>
       <section>
