Add Dance: Tilt

--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
                   })
                 </pre>
         </div>
+        <h3>
+          Tilt
+        </h3>
+        <div class="demo">
+          <div class="rythm tilt1">♫</div>
+          <pre class="prettyprint">
+            rythm.addRythm('tilt1', 'tilt', 0, 10)
+          </pre>
+        </div>
+        <div class="demo">
+          <div class="rythm tilt2">♫</div>
+          <pre class="prettyprint">
+            rythm.addRythm('tilt2', 'tilt', 0, 10, {
+              reverse : true
+            })
+          </pre>
+        </div>
       </section>
       <h1>
         Added in v2.2.3
