font-color-dance

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </h3>
         <div class="demo">
           <div class="rythm fontColor fontColor1">
-            Font-color
+            <div class="fontColor__placeholder"></div>Font-color !
           </div>
           <pre class="prettyprint">
                 rythm.addRythm('fontColor1', 'color', 0, 10)
@@ -89,7 +89,7 @@
         </div>
         <div class="demo">
           <div class="rythm fontColor fontColor2">
-            Font-color
+            <div class="fontColor__placeholder"></div>Font-color !
           </div>
           <pre class="prettyprint">
                 rythm.addRythm('fontColor2', 'color', 0, 10 {
@@ -116,7 +116,7 @@
         </div>
         <div class="demo">
           <div class="rythm font fontSize2">
-            <div class="fontSize__placeholder"></div>Font-dance !
+            <div class="fontSize__placeholder">Font-dance !
           </div>
           <pre class="prettyprint">
                   rythm.addRythm('fontSize', 'fontSize', 0, 2, {
