--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </h3>
         <div class="demo">
           <div class="rythm fontColor fontColor1">
-            Font-color
+            <div class="fontColor__placeholder"></div>Font-color !
           </div>
           <pre class="prettyprint">
                 rythm.addRythm('fontColor1', 'color', 0, 10)
@@ -70,7 +70,7 @@
         </div>
         <div class="demo">
           <div class="rythm fontColor fontColor2">
-            Font-color
+            <div class="fontColor__placeholder"></div>Font-color !
           </div>
           <pre class="prettyprint">
                 rythm.addRythm('fontColor2', 'color', 0, 10 {
@@ -97,7 +97,7 @@
         </div>
         <div class="demo">
           <div class="rythm font fontSize2">
-            <div class="fontSize__placeholder"></div>Font-dance !
+            <div class="fontSize__placeholder">Font-dance !
           </div>
           <pre class="prettyprint">
                   rythm.addRythm('fontSize', 'fontSize', 0, 2, {
