font-color-dance

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
         <div class="demo">
           <div class="rythm font fontSize2">
-            <div class="fontSize__placeholder">Font-dance !
+	    <div class="fontSize__placeholder"></div>Font-dance !
           </div>
           <pre class="prettyprint">
                   rythm.addRythm('fontSize', 'fontSize', 0, 2, {
