:ok_hand: Rebased and updated demo

--- a/index.html
+++ b/index.html
@@ -64,15 +64,39 @@
           <div class="rythm tilt1">♫</div>
           <pre class="prettyprint">
                     rythm.addRythm('tilt1', 'tilt', 0, 10)
-                  </pre>
+          </pre>
         </div>
         <div class="demo">
           <div class="rythm tilt2">♫</div>
           <pre class="prettyprint">
-                    rythm.addRythm('tilt2', 'tilt', 0, 10, {
-                      reverse : true
-                    })
-                  </pre>
+                  rythm.addRythm('tilt2', 'tilt', 0, 10, {
+                    reverse : true
+                  })
+          </pre>
+        </div>
+      </section>
+      <section>
+        <h3>
+          Font-color
+        </h3>
+        <div class="demo">
+          <div class="rythm fontColor fontColor1">
+            Font-color
+          </div>
+          <pre class="prettyprint">
+                rythm.addRythm('fontColor1', 'color', 0, 10)
+              </pre>
+        </div>
+        <div class="demo">
+          <div class="rythm fontColor fontColor2">
+            Font-color
+          </div>
+          <pre class="prettyprint">
+                rythm.addRythm('fontColor2', 'color', 0, 10 {
+                  from: [0,0,255],
+                  to:[255,0,255]
+                })
+          </pre>
         </div>
       </section>
       <h1>
@@ -100,23 +124,6 @@
                     max: 2
                   })
                 </pre>
-        </div>
-        <h3>
-          Tilt
-        </h3>
-        <div class="demo">
-          <div class="rythm tilt1">♫</div>
-          <pre class="prettyprint">
-            rythm.addRythm('tilt1', 'tilt', 0, 10)
-          </pre>
-        </div>
-        <div class="demo">
-          <div class="rythm tilt2">♫</div>
-          <pre class="prettyprint">
-            rythm.addRythm('tilt2', 'tilt', 0, 10, {
-              reverse : true
-            })
-          </pre>
         </div>
       </section>
       <h1>
