--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@
           Font-color
         </h3>
         <div class="demo">
-          <div class="rythm fontColor fontColor1">
-            <div class="fontColor__placeholder"></div>Font-color !
+          <div class="rythm font fontColor1">
+            <div class="font__placeholder"></div>Font-color !
           </div>
           <pre class="prettyprint">
                 rythm.addRythm('fontColor1', 'color', 0, 10)
               </pre>
         </div>
         <div class="demo">
-          <div class="rythm fontColor fontColor2">
-            <div class="fontColor__placeholder"></div>Font-color !
+          <div class="rythm font fontColor2">
+            <div class="font__placeholder"></div>Font-color !
           </div>
           <pre class="prettyprint">
                 rythm.addRythm('fontColor2', 'color', 0, 10 {
@@ -108,7 +108,7 @@
         </h3>
         <div class="demo">
           <div class="rythm font fontSize1">
-            <div class="fontSize__placeholder"></div>Font-dance !
+            <div class="font__placeholder"></div>Font-dance !
           </div>
           <pre class="prettyprint">
                   rythm.addRythm('fontSize1', 'fontSize', 0, 2)
@@ -116,7 +116,7 @@
         </div>
         <div class="demo">
           <div class="rythm font fontSize2">
-	    <div class="fontSize__placeholder"></div>Font-dance !
+	          <div class="font__placeholder"></div>Font-dance !
           </div>
           <pre class="prettyprint">
                   rythm.addRythm('fontSize', 'fontSize', 0, 2, {
@@ -218,7 +218,7 @@
           Kern
         </h3>
         <div class="demo">
-          <div class="rythm rythm-kern kern1">𐇑🕪 rythm.js</div>
+          <div class="rythm font kern1">𐇑🕪 rythm.js</div>
           <pre class="prettyprint">
             rythm.addRythm('kern1', 'kern', 0, 10 , {
               min: -5,
@@ -227,7 +227,7 @@
           </pre>
         </div>
         <div class="demo">
-          <div class="rythm rythm-kern kern2">𐇑🕪 rythm.js</div>
+          <div class="rythm font kern2">𐇑🕪 rythm.js</div>
           <pre class="prettyprint">
             rythm.addRythm('kern2', 'kern', 0, 10 , {
               min: -5,
