Fixed Syntax Error

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="font__placeholder"></div>Font-color !
           </div>
           <pre class="prettyprint">
-            rythm.addRythm('fontColor2', 'color', 0, 10 {
+            rythm.addRythm('fontColor2', 'color', 0, 10, {
               from: [0,0,255],
               to:[255,0,255]
             })
