--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <div class="demo">
           <div class="rythm blur3">♫</div>
           <pre class="prettyprint">
-            rythm.addRythm('blur3', 'color', 0, 10, {
+            rythm.addRythm('blur3', 'blur', 0, 10, {
               max: 16
             })</pre>
         </div>
